// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApplicationPage details component should be rendered correctly provided app with no description, no platforms, no langs and no changes no version 1`] = `
<div>
  <div
    class="sto-app-details"
  >
    <div
      class="sto-app-descriptions"
    >
      
      
    </div>
    <div
      class="sto-app-additional-details"
    >
      <h3
        class="u-title-h3"
      >
        Informations
      </h3>
      <div
        class="sto-app-info"
      >
        <div
          class="sto-app-info-header"
        >
          Categories
        </div>
        <div
          class="sto-app-info-content"
        >
          The essentials
        </div>
      </div>
      <div
        class="sto-app-info"
      >
        <div
          class="sto-app-info-header"
        >
          Version
        </div>
        <div
          class="sto-app-info-content"
        >
          <span
            data-testid="toggleChannels"
          >
            0.1.0
          </span>
        </div>
      </div>
      <div
        class="sto-app-info"
      >
        <div
          class="sto-app-info-header"
        >
          Languages
        </div>
        <div
          class="sto-app-info-content"
        >
          English, French
        </div>
      </div>
      <div>
        <button
          class="styles__c-btn___3kXsk styles__c-btn--subtle___2rRQ0 styles__c-btn--center___Nny0n sto-app-permissions-button"
          type="submit"
        >
          <span>
            <span>
              Show permissions
            </span>
          </span>
        </button>
      </div>
      <div>
        <h3
          class="u-title-h3"
        >
          Developer Details
        </h3>
        <div
          class="sto-app-developer-infos"
        >
          <span>
            Cozy
          </span>
          <a
            class="sto-app-developer-link"
            href="https://cozy.io"
            rel="noopener noreferrer"
            target="_blank"
          >
            https://cozy.io
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ApplicationPage details component should be rendered correctly with provided app 1`] = `
<div>
  <div
    class="sto-app-details"
  >
    <div
      class="sto-app-descriptions"
    >
      <div
        class="sto-app-description"
      >
        <h3
          class="u-title-h3"
        >
          Description
        </h3>
        <div>
          <h3
            class="md-title md-title--h3"
          >
            Features
          </h3>
          <p
            class="md-paragraph"
          >
            Enjoy features to grab your data in you Cozy 
            <span>
              <img
                class="emoji"
                data-codepoints="1f389"
                src="/emoji-data/img-apple-64/1f389.png"
              />
            </span>
          </p>
        </div>
      </div>
      <div
        class="sto-app-changes"
      >
        <h3
          class="u-title-h3"
        >
          What's New?
        </h3>
        <div>
          <h3
            class="md-title md-title--h3"
          >
            NEW!!!
          </h3>
          <p
            class="md-paragraph"
          >
             Now on the cozy-store :tada
          </p>
        </div>
      </div>
    </div>
    <div
      class="sto-app-additional-details"
    >
      <h3
        class="u-title-h3"
      >
        Informations
      </h3>
      <div
        class="sto-app-info"
      >
        <div
          class="sto-app-info-header"
        >
          Categories
        </div>
        <div
          class="sto-app-info-content"
        >
          The essentials
        </div>
      </div>
      <div
        class="sto-app-info"
      >
        <div
          class="sto-app-info-header"
        >
          Version
        </div>
        <div
          class="sto-app-info-content"
        >
          <span
            data-testid="toggleChannels"
          >
            0.1.0
          </span>
        </div>
      </div>
      <div
        class="sto-app-info"
      >
        <div
          class="sto-app-info-header"
        >
          Languages
        </div>
        <div
          class="sto-app-info-content"
        >
          English, French
        </div>
      </div>
      <div
        class="sto-app-info"
      >
        <div
          class="sto-app-info-header"
        >
          Mobile Application
        </div>
        <div
          class="sto-app-info-content sto-app-info-content--mobile-apps"
        >
          <a
            class="sto-app-info-content-icon"
            rel="noopener noreferrer"
            target="_blank"
          >
            <svg
              class="styles__icon___23x3R"
              height="24px"
              width="24px"
            >
              <use
                xlink:href="#<svg><text>svg icon</text></svg>"
              />
            </svg>
          </a>
          <a
            class="sto-app-info-content-icon"
            href="https://mock.app"
            rel="noopener noreferrer"
            target="_blank"
          >
            <svg
              class="styles__icon___23x3R"
              height="24px"
              width="24px"
            >
              <use
                xlink:href="#<svg><text>svg icon</text></svg>"
              />
            </svg>
          </a>
        </div>
      </div>
      <div>
        <button
          class="styles__c-btn___3kXsk styles__c-btn--subtle___2rRQ0 styles__c-btn--center___Nny0n sto-app-permissions-button"
          type="submit"
        >
          <span>
            <span>
              Show permissions
            </span>
          </span>
        </button>
      </div>
      <div>
        <h3
          class="u-title-h3"
        >
          Developer Details
        </h3>
        <div
          class="sto-app-developer-infos"
        >
          <span>
            Cozy
          </span>
          <a
            class="sto-app-developer-link"
            href="https://cozy.io"
            rel="noopener noreferrer"
            target="_blank"
          >
            https://cozy.io
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ApplicationPage details component should be rendered correctly with provided konnector 1`] = `
<div>
  <div
    class="sto-app-details"
  >
    <div
      class="sto-app-descriptions"
    />
    <div
      class="sto-app-additional-details"
    >
      <h3
        class="u-title-h3"
      >
        Informations
      </h3>
      <div
        class="sto-app-info"
      >
        <div
          class="sto-app-info-header"
        >
          Categories
        </div>
        <div
          class="sto-app-info-content"
        >
          Transportation
        </div>
      </div>
      <div
        class="sto-app-info"
      >
        <div
          class="sto-app-info-header"
        >
          Version
        </div>
        <div
          class="sto-app-info-content"
        >
          <span
            data-testid="toggleChannels"
          >
            Unknown
          </span>
        </div>
      </div>
      <div
        class="sto-app-info"
      >
        <div
          class="sto-app-info-header"
        >
          Languages
        </div>
        <div
          class="sto-app-info-content"
        >
          French, English
        </div>
      </div>
      <div>
        <button
          class="styles__c-btn___3kXsk styles__c-btn--subtle___2rRQ0 styles__c-btn--center___Nny0n sto-app-permissions-button"
          type="submit"
        >
          <span>
            <span>
              Show permissions
            </span>
          </span>
        </button>
      </div>
      <div>
        <h3
          class="u-title-h3"
        >
          Developer Details
        </h3>
        <div
          class="sto-app-developer-infos"
        >
          <span>
            Cozy
          </span>
          <a
            class="sto-app-developer-link"
            href="https://cozy.io"
            rel="noopener noreferrer"
            target="_blank"
          >
            https://cozy.io
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ApplicationPage details component should be rendered correctly with provided konnector in Intent 1`] = `
<div>
  <div
    class="sto-app-details"
  >
    <div
      class="sto-app-descriptions"
    />
    <div
      class="sto-app-additional-details"
    >
      <h3
        class="u-title-h3"
      >
        Informations
      </h3>
      <div
        class="sto-app-info"
      >
        <div
          class="sto-app-info-header"
        >
          Categories
        </div>
        <div
          class="sto-app-info-content"
        >
          Transportation
        </div>
      </div>
      <div
        class="sto-app-info"
      >
        <div
          class="sto-app-info-header"
        >
          Version
        </div>
        <div
          class="sto-app-info-content"
        >
          <span
            data-testid="toggleChannels"
          >
            Unknown
          </span>
        </div>
      </div>
      <div
        class="sto-app-info"
      >
        <div
          class="sto-app-info-header"
        >
          Languages
        </div>
        <div
          class="sto-app-info-content"
        >
          French, English
        </div>
      </div>
      <div>
        <button
          class="styles__c-btn___3kXsk styles__c-btn--subtle___2rRQ0 styles__c-btn--center___Nny0n sto-app-permissions-button"
          type="submit"
        >
          <span>
            <span>
              Show permissions
            </span>
          </span>
        </button>
      </div>
      <div>
        <h3
          class="u-title-h3"
        >
          Developer Details
        </h3>
        <div
          class="sto-app-developer-infos"
        >
          <span>
            Cozy
          </span>
          <a
            class="sto-app-developer-link"
            href="https://cozy.io"
            rel="noopener noreferrer"
            target="_blank"
          >
            https://cozy.io
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ApplicationPage details component should handle channel switching if with installed app from registry provided 1`] = `
<div>
  <div
    class="sto-app-details"
  >
    <div
      class="sto-app-descriptions"
    >
      <div
        class="sto-app-description"
      >
        <h3
          class="u-title-h3"
        >
          Description
        </h3>
        <div>
          <h3
            class="md-title md-title--h3"
          >
            Features
          </h3>
          <p
            class="md-paragraph"
          >
            Enjoy features to grab your data in you Cozy 
            <span>
              <img
                class="emoji"
                data-codepoints="1f389"
                src="/emoji-data/img-apple-64/1f389.png"
              />
            </span>
          </p>
        </div>
      </div>
      <div
        class="sto-app-changes"
      >
        <h3
          class="u-title-h3"
        >
          What's New?
        </h3>
        <div>
          <h3
            class="md-title md-title--h3"
          >
            NEW!!!
          </h3>
          <p
            class="md-paragraph"
          >
             Now on the cozy-store :tada
          </p>
        </div>
      </div>
    </div>
    <div
      class="sto-app-additional-details"
    >
      <h3
        class="u-title-h3"
      >
        Informations
      </h3>
      <div
        class="sto-app-info"
      >
        <div
          class="sto-app-info-header"
        >
          Categories
        </div>
        <div
          class="sto-app-info-content"
        >
          The essentials
        </div>
      </div>
      <div
        class="sto-app-info"
      >
        <div
          class="sto-app-info-header"
        >
          Version
        </div>
        <div
          class="sto-app-info-content"
        >
          <span
            data-testid="toggleChannels"
          >
            0.1.0
          </span>
        </div>
      </div>
      <div
        class="sto-app-info"
        data-testid="betaToggle"
      >
        <div
          class="sto-app-info-header"
        >
          Get Beta
        </div>
        <div
          class="sto-app-info-content"
        >
          <span
            class="styles__toggle___3zVsE"
          >
            <input
              class="styles__checkbox___3ko96"
              id="sto-app-undefined-beta-toggle"
              type="checkbox"
            />
            <label
              class="styles__label___3jY1f"
              for="sto-app-undefined-beta-toggle"
            />
          </span>
        </div>
      </div>
      <div
        class="sto-app-info"
        data-testid="devToggle"
      >
        <div
          class="sto-app-info-header"
        >
          Get Dev
        </div>
        <div
          class="sto-app-info-content"
        >
          <span
            class="styles__toggle___3zVsE"
          >
            <input
              class="styles__checkbox___3ko96"
              id="sto-app-undefined-dev-toggle"
              type="checkbox"
            />
            <label
              class="styles__label___3jY1f"
              for="sto-app-undefined-dev-toggle"
            />
          </span>
        </div>
      </div>
      <div
        class="sto-app-info"
      >
        <div
          class="sto-app-info-header"
        >
          Languages
        </div>
        <div
          class="sto-app-info-content"
        >
          English, French
        </div>
      </div>
      <div
        class="sto-app-info"
      >
        <div
          class="sto-app-info-header"
        >
          Mobile Application
        </div>
        <div
          class="sto-app-info-content sto-app-info-content--mobile-apps"
        >
          <a
            class="sto-app-info-content-icon"
            rel="noopener noreferrer"
            target="_blank"
          >
            <svg
              class="styles__icon___23x3R"
              height="24px"
              width="24px"
            >
              <use
                xlink:href="#<svg><text>svg icon</text></svg>"
              />
            </svg>
          </a>
          <a
            class="sto-app-info-content-icon"
            href="https://mock.app"
            rel="noopener noreferrer"
            target="_blank"
          >
            <svg
              class="styles__icon___23x3R"
              height="24px"
              width="24px"
            >
              <use
                xlink:href="#<svg><text>svg icon</text></svg>"
              />
            </svg>
          </a>
        </div>
      </div>
      <div>
        <button
          class="styles__c-btn___3kXsk styles__c-btn--subtle___2rRQ0 styles__c-btn--center___Nny0n sto-app-permissions-button"
          type="submit"
        >
          <span>
            <span>
              Show permissions
            </span>
          </span>
        </button>
      </div>
      <div>
        <h3
          class="u-title-h3"
        >
          Developer Details
        </h3>
        <div
          class="sto-app-developer-infos"
        >
          <span>
            Cozy
          </span>
          <a
            class="sto-app-developer-link"
            href="https://cozy.io"
            rel="noopener noreferrer"
            target="_blank"
          >
            https://cozy.io
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ApplicationPage details component should not suggest Dev channel switching if the context is not in debug mode 1`] = `
<div>
  <div
    class="sto-app-details"
  >
    <div
      class="sto-app-descriptions"
    >
      <div
        class="sto-app-description"
      >
        <h3
          class="u-title-h3"
        >
          Description
        </h3>
        <div>
          <h3
            class="md-title md-title--h3"
          >
            Features
          </h3>
          <p
            class="md-paragraph"
          >
            Enjoy features to grab your data in you Cozy 
            <span>
              <img
                class="emoji"
                data-codepoints="1f389"
                src="/emoji-data/img-apple-64/1f389.png"
              />
            </span>
          </p>
        </div>
      </div>
      <div
        class="sto-app-changes"
      >
        <h3
          class="u-title-h3"
        >
          What's New?
        </h3>
        <div>
          <h3
            class="md-title md-title--h3"
          >
            NEW!!!
          </h3>
          <p
            class="md-paragraph"
          >
             Now on the cozy-store :tada
          </p>
        </div>
      </div>
    </div>
    <div
      class="sto-app-additional-details"
    >
      <h3
        class="u-title-h3"
      >
        Informations
      </h3>
      <div
        class="sto-app-info"
      >
        <div
          class="sto-app-info-header"
        >
          Categories
        </div>
        <div
          class="sto-app-info-content"
        >
          The essentials
        </div>
      </div>
      <div
        class="sto-app-info"
      >
        <div
          class="sto-app-info-header"
        >
          Version
        </div>
        <div
          class="sto-app-info-content"
        >
          <span
            data-testid="toggleChannels"
          >
            0.1.0
          </span>
        </div>
      </div>
      <div
        class="sto-app-info"
        data-testid="betaToggle"
      >
        <div
          class="sto-app-info-header"
        >
          Get Beta
        </div>
        <div
          class="sto-app-info-content"
        >
          <span
            class="styles__toggle___3zVsE"
          >
            <input
              class="styles__checkbox___3ko96"
              id="sto-app-undefined-beta-toggle"
              type="checkbox"
            />
            <label
              class="styles__label___3jY1f"
              for="sto-app-undefined-beta-toggle"
            />
          </span>
        </div>
      </div>
      <div
        class="sto-app-info"
      >
        <div
          class="sto-app-info-header"
        >
          Languages
        </div>
        <div
          class="sto-app-info-content"
        >
          English, French
        </div>
      </div>
      <div
        class="sto-app-info"
      >
        <div
          class="sto-app-info-header"
        >
          Mobile Application
        </div>
        <div
          class="sto-app-info-content sto-app-info-content--mobile-apps"
        >
          <a
            class="sto-app-info-content-icon"
            rel="noopener noreferrer"
            target="_blank"
          >
            <svg
              class="styles__icon___23x3R"
              height="24px"
              width="24px"
            >
              <use
                xlink:href="#<svg><text>svg icon</text></svg>"
              />
            </svg>
          </a>
          <a
            class="sto-app-info-content-icon"
            href="https://mock.app"
            rel="noopener noreferrer"
            target="_blank"
          >
            <svg
              class="styles__icon___23x3R"
              height="24px"
              width="24px"
            >
              <use
                xlink:href="#<svg><text>svg icon</text></svg>"
              />
            </svg>
          </a>
        </div>
      </div>
      <div>
        <button
          class="styles__c-btn___3kXsk styles__c-btn--subtle___2rRQ0 styles__c-btn--center___Nny0n sto-app-permissions-button"
          type="submit"
        >
          <span>
            <span>
              Show permissions
            </span>
          </span>
        </button>
      </div>
      <div>
        <h3
          class="u-title-h3"
        >
          Developer Details
        </h3>
        <div
          class="sto-app-developer-infos"
        >
          <span>
            Cozy
          </span>
          <a
            class="sto-app-developer-link"
            href="https://cozy.io"
            rel="noopener noreferrer"
            target="_blank"
          >
            https://cozy.io
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ApplicationPage details component should not suggest channel switching if the app is not from registry and not installed 1`] = `
<div>
  <div
    class="sto-app-details"
  >
    <div
      class="sto-app-descriptions"
    >
      <div
        class="sto-app-description"
      >
        <h3
          class="u-title-h3"
        >
          Description
        </h3>
        <div>
          <h3
            class="md-title md-title--h3"
          >
            Features
          </h3>
          <p
            class="md-paragraph"
          >
            Enjoy features to grab your data in you Cozy 
            <span>
              <img
                class="emoji"
                data-codepoints="1f389"
                src="/emoji-data/img-apple-64/1f389.png"
              />
            </span>
          </p>
        </div>
      </div>
      <div
        class="sto-app-changes"
      >
        <h3
          class="u-title-h3"
        >
          What's New?
        </h3>
        <div>
          <h3
            class="md-title md-title--h3"
          >
            NEW!!!
          </h3>
          <p
            class="md-paragraph"
          >
             Now on the cozy-store :tada
          </p>
        </div>
      </div>
    </div>
    <div
      class="sto-app-additional-details"
    >
      <h3
        class="u-title-h3"
      >
        Informations
      </h3>
      <div
        class="sto-app-info"
      >
        <div
          class="sto-app-info-header"
        >
          Categories
        </div>
        <div
          class="sto-app-info-content"
        >
          The essentials
        </div>
      </div>
      <div
        class="sto-app-info"
      >
        <div
          class="sto-app-info-header"
        >
          Version
        </div>
        <div
          class="sto-app-info-content"
        >
          <span
            data-testid="toggleChannels"
          >
            0.1.0
          </span>
        </div>
      </div>
      <div
        class="sto-app-info"
      >
        <div
          class="sto-app-info-header"
        >
          Languages
        </div>
        <div
          class="sto-app-info-content"
        >
          English, French
        </div>
      </div>
      <div
        class="sto-app-info"
      >
        <div
          class="sto-app-info-header"
        >
          Mobile Application
        </div>
        <div
          class="sto-app-info-content sto-app-info-content--mobile-apps"
        >
          <a
            class="sto-app-info-content-icon"
            rel="noopener noreferrer"
            target="_blank"
          >
            <svg
              class="styles__icon___23x3R"
              height="24px"
              width="24px"
            >
              <use
                xlink:href="#<svg><text>svg icon</text></svg>"
              />
            </svg>
          </a>
          <a
            class="sto-app-info-content-icon"
            href="https://mock.app"
            rel="noopener noreferrer"
            target="_blank"
          >
            <svg
              class="styles__icon___23x3R"
              height="24px"
              width="24px"
            >
              <use
                xlink:href="#<svg><text>svg icon</text></svg>"
              />
            </svg>
          </a>
        </div>
      </div>
      <div>
        <button
          class="styles__c-btn___3kXsk styles__c-btn--subtle___2rRQ0 styles__c-btn--center___Nny0n sto-app-permissions-button"
          type="submit"
        >
          <span>
            <span>
              Show permissions
            </span>
          </span>
        </button>
      </div>
      <div>
        <h3
          class="u-title-h3"
        >
          Developer Details
        </h3>
        <div
          class="sto-app-developer-infos"
        >
          <span>
            Cozy
          </span>
          <a
            class="sto-app-developer-link"
            href="https://cozy.io"
            rel="noopener noreferrer"
            target="_blank"
          >
            https://cozy.io
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ApplicationPage details component should not suggest channel switching if the app is not installed 1`] = `
<div>
  <div
    class="sto-app-details"
  >
    <div
      class="sto-app-descriptions"
    >
      <div
        class="sto-app-description"
      >
        <h3
          class="u-title-h3"
        >
          Description
        </h3>
        <div>
          <h3
            class="md-title md-title--h3"
          >
            Features
          </h3>
          <p
            class="md-paragraph"
          >
            Enjoy features to grab your data in you Cozy 
            <span>
              <img
                class="emoji"
                data-codepoints="1f389"
                src="/emoji-data/img-apple-64/1f389.png"
              />
            </span>
          </p>
        </div>
      </div>
      <div
        class="sto-app-changes"
      >
        <h3
          class="u-title-h3"
        >
          What's New?
        </h3>
        <div>
          <h3
            class="md-title md-title--h3"
          >
            NEW!!!
          </h3>
          <p
            class="md-paragraph"
          >
             Now on the cozy-store :tada
          </p>
        </div>
      </div>
    </div>
    <div
      class="sto-app-additional-details"
    >
      <h3
        class="u-title-h3"
      >
        Informations
      </h3>
      <div
        class="sto-app-info"
      >
        <div
          class="sto-app-info-header"
        >
          Categories
        </div>
        <div
          class="sto-app-info-content"
        >
          The essentials
        </div>
      </div>
      <div
        class="sto-app-info"
      >
        <div
          class="sto-app-info-header"
        >
          Version
        </div>
        <div
          class="sto-app-info-content"
        >
          <span
            data-testid="toggleChannels"
          >
            0.1.0
          </span>
        </div>
      </div>
      <div
        class="sto-app-info"
      >
        <div
          class="sto-app-info-header"
        >
          Languages
        </div>
        <div
          class="sto-app-info-content"
        >
          English, French
        </div>
      </div>
      <div
        class="sto-app-info"
      >
        <div
          class="sto-app-info-header"
        >
          Mobile Application
        </div>
        <div
          class="sto-app-info-content sto-app-info-content--mobile-apps"
        >
          <a
            class="sto-app-info-content-icon"
            rel="noopener noreferrer"
            target="_blank"
          >
            <svg
              class="styles__icon___23x3R"
              height="24px"
              width="24px"
            >
              <use
                xlink:href="#<svg><text>svg icon</text></svg>"
              />
            </svg>
          </a>
          <a
            class="sto-app-info-content-icon"
            href="https://mock.app"
            rel="noopener noreferrer"
            target="_blank"
          >
            <svg
              class="styles__icon___23x3R"
              height="24px"
              width="24px"
            >
              <use
                xlink:href="#<svg><text>svg icon</text></svg>"
              />
            </svg>
          </a>
        </div>
      </div>
      <div>
        <button
          class="styles__c-btn___3kXsk styles__c-btn--subtle___2rRQ0 styles__c-btn--center___Nny0n sto-app-permissions-button"
          type="submit"
        >
          <span>
            <span>
              Show permissions
            </span>
          </span>
        </button>
      </div>
      <div>
        <h3
          class="u-title-h3"
        >
          Developer Details
        </h3>
        <div
          class="sto-app-developer-infos"
        >
          <span>
            Cozy
          </span>
          <a
            class="sto-app-developer-link"
            href="https://cozy.io"
            rel="noopener noreferrer"
            target="_blank"
          >
            https://cozy.io
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ApplicationPage details component should not suggest channel switching if the installed app is not from registry 1`] = `
<div>
  <div
    class="sto-app-details"
  >
    <div
      class="sto-app-descriptions"
    >
      <div
        class="sto-app-description"
      >
        <h3
          class="u-title-h3"
        >
          Description
        </h3>
        <div>
          <h3
            class="md-title md-title--h3"
          >
            Features
          </h3>
          <p
            class="md-paragraph"
          >
            Enjoy features to grab your data in you Cozy 
            <span>
              <img
                class="emoji"
                data-codepoints="1f389"
                src="/emoji-data/img-apple-64/1f389.png"
              />
            </span>
          </p>
        </div>
      </div>
      <div
        class="sto-app-changes"
      >
        <h3
          class="u-title-h3"
        >
          What's New?
        </h3>
        <div>
          <h3
            class="md-title md-title--h3"
          >
            NEW!!!
          </h3>
          <p
            class="md-paragraph"
          >
             Now on the cozy-store :tada
          </p>
        </div>
      </div>
    </div>
    <div
      class="sto-app-additional-details"
    >
      <h3
        class="u-title-h3"
      >
        Informations
      </h3>
      <div
        class="sto-app-info"
      >
        <div
          class="sto-app-info-header"
        >
          Categories
        </div>
        <div
          class="sto-app-info-content"
        >
          The essentials
        </div>
      </div>
      <div
        class="sto-app-info"
      >
        <div
          class="sto-app-info-header"
        >
          Version
        </div>
        <div
          class="sto-app-info-content"
        >
          <span
            data-testid="toggleChannels"
          >
            0.1.0
          </span>
        </div>
      </div>
      <div
        class="sto-app-info"
      >
        <div
          class="sto-app-info-header"
        >
          Languages
        </div>
        <div
          class="sto-app-info-content"
        >
          English, French
        </div>
      </div>
      <div
        class="sto-app-info"
      >
        <div
          class="sto-app-info-header"
        >
          Mobile Application
        </div>
        <div
          class="sto-app-info-content sto-app-info-content--mobile-apps"
        >
          <a
            class="sto-app-info-content-icon"
            rel="noopener noreferrer"
            target="_blank"
          >
            <svg
              class="styles__icon___23x3R"
              height="24px"
              width="24px"
            >
              <use
                xlink:href="#<svg><text>svg icon</text></svg>"
              />
            </svg>
          </a>
          <a
            class="sto-app-info-content-icon"
            href="https://mock.app"
            rel="noopener noreferrer"
            target="_blank"
          >
            <svg
              class="styles__icon___23x3R"
              height="24px"
              width="24px"
            >
              <use
                xlink:href="#<svg><text>svg icon</text></svg>"
              />
            </svg>
          </a>
        </div>
      </div>
      <div>
        <button
          class="styles__c-btn___3kXsk styles__c-btn--subtle___2rRQ0 styles__c-btn--center___Nny0n sto-app-permissions-button"
          type="submit"
        >
          <span>
            <span>
              Show permissions
            </span>
          </span>
        </button>
      </div>
      <div>
        <h3
          class="u-title-h3"
        >
          Developer Details
        </h3>
        <div
          class="sto-app-developer-infos"
        >
          <span>
            Cozy
          </span>
          <a
            class="sto-app-developer-link"
            href="https://cozy.io"
            rel="noopener noreferrer"
            target="_blank"
          >
            https://cozy.io
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;
